# pdf_oxide

./: .gitignore  01_RENDER_PAGE_TASKS.yaml  02_PROFILER_TASKS.yaml  15_PDF_CLONER_PLAN.yaml  16_PDF_CLONER_REFACTOR_TASKS.yaml  16_PDF_EXTRACTION_CALIBRATION_TASKS.yaml  17_PDF_QUARANTINE_FIX_TASKS.yaml  18_NIST_EXTRACTION_VALIDATION_TASKS.yaml  CHANGELOG.md  CODE_RUNNER_CODEX_REVIEW.md  CODE_RUNNER_CONTEXT_DESIGN.md  CODE_RUNNER_SENIOR_REVIEW.md  Cargo.toml  GOAL.md  Makefile  PROJECT_KNOWLEDGE.md  README.md  RENDER_PAGE_TODO.md  WALKTHROUGH.md  clone_from_toc.py  clone_pdf_v2.py  enriched_prompt_example.txt  install.ps1  install.sh  promotion_manifest.json  pyproject.toml  security-scan_task_state.json
.ask/: browser-oracles.yaml
.tau/: gs001-execution-dag.json
contracts/: annotation_decision_event_v1.schema.json  annotation_queue_manifest_v1.schema.json  bbox_space_v1.schema.json  calibration_label_event_v1.schema.json  document_mount_manifest_v1.schema.json  page_image_manifest_v1.schema.json  retrieval_answer_v1.schema.json  ux_timing_event_v1.schema.json
docs/: HANDOFF_GS001.md  OCR_GUIDE.md  getting-started-python.md  pass1_contract_v1.md
examples/: bench_extract_all.rs  verify_corpus.rs
local/: HANDOFF.md
pdf_oxide_cli/: Cargo.toml
pdf_oxide_mcp/: Cargo.toml
pdf_oxide_mcp/src/: extract.rs  main.rs  protocol.rs
prompts/: verify_extraction_accuracy.md
python/: 16_PDF_CLONE_PLAN.yaml
scripts/: benchmark_backbones.py  benchmark_vs_pymupdf.py  debug_page_coords.py  debug_single_pdf.py  debug_spans.py  eval_extract_document.py  gs001_lock.py  (+14 more)
(+4066 files in other folders)
