[package]
name = "pdf_oxide_mcp"
version = "0.3.11"
edition = "2021"
description = "MCP server for PDF extraction powered by pdf_oxide"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yfedoseev/pdf_oxide"

[[bin]]
name = "pdf-oxide-mcp"
path = "src/main.rs"

[dependencies]
pdf_oxide = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
